header and hero

--- a/index.html
+++ b/index.html
@@ -10,7 +10,99 @@
 </head>
 
 <body>
+    <div class="header">
+        <div class="logo">
+            <a href="#">
+                Pooter
+            </a>
+        </div>
+        <div class="right-links">
+            <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Log in</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="section-one">
+        <div class="left-side">
+            <div class="hero-main-text">
+                This website is awesome
+            </div>
+            <div class="hero-secondary-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+            <button class="sign-up">Sign up</button>
+        </div>
+        <div class="right-side">
+            <img class="spotlight" src="./images/spotlight.jpg"
+                alt="spotlight image">
+        </div>
+    </div>
+    <div class="section-two">
+        <div class="info-header-text">
+            Some random information
+        </div>
+        <div class="card">
+            <div class="image-content">
 
+            </div>
+            <div class="info-content">
+                This is random info
+            </div>
+        </div>
+        <div class="card">
+            <div class="image-content">
+
+            </div>
+            <div class="info-content">
+                This is random info
+            </div>
+        </div>
+        <div class="card">
+            <div class="image-content">
+
+            </div>
+            <div class="info-content">
+                This is random info
+            </div>
+        </div>
+        <div class="card">
+            <div class="image-content">
+
+            </div>
+            <div class="info-content">
+                This is random info
+            </div>
+        </div>
+    </div>
+    <div class="section-three">
+        <div class="quote">
+            This is an inspiring quote
+        </div>
+        <div class="quote-author">
+            -Thor, God of Thunder
+        </div>
+    </div>
+    <div class="section-four">
+        <div class="cta-box">
+            <div class="cta-header">
+                Call to action! It's time!
+            </div>
+            <div class="cta-body">
+                Sign up for product by clicking on sign up button
+            </div>
+            <button class="sign-up secondary">
+                Sign up
+            </button>
+        </div>
+
+    </div>
+    <div class="footer">
+        <span>Copyright © Pooter
+            <script>document.write(new Date().getFullYear());</script>
+        </span>
+    </div>
 </body>
 
 </html>
