landing page done

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <div class="section-one">
         <div class="left-side">
             <div class="hero-main-text">
-                This website is awesome
+                Welcome to Pooter!
             </div>
             <div class="hero-secondary-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Pick a build and just get started.
             </div>
             <button class="sign-up">Sign up</button>
         </div>
@@ -41,56 +41,77 @@
     </div>
     <div class="section-two">
         <div class="info-header-text">
-            Some random information
+            Pick your build
         </div>
-        <div class="card">
-            <div class="image-content">
-
+        <div class="content">
+            <div class="card">
+                <div class="image-content">
+                    <img src="./images/large.jpg" alt="large">
+                </div>
+                <div class="info-content">
+                    Large (ATX/Full-tower). For the beefiest and chonky-est
+                    builds out there. Anyone that comes over will surely
+                    question your virginity.
+                </div>
             </div>
-            <div class="info-content">
-                This is random info
+            <div class="card">
+                <div class="image-content">
+                    <img src="./images/medium.jpg" alt="medium">
+                </div>
+                <div class="info-content">
+                    Medium (m-ATX/Mid-tower). The middle ground. Good for those
+                    who does not want any compromises but still want to place it
+                    somewhere.
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="image-content">
-
+            <div class="card">
+                <div class="image-content">
+                    <img src="./images/small.jpg" alt="small">
+                </div>
+                <div class="info-content">
+                    Smol (ITX/SFF). Denser than any male MC in a harem anime.
+                    Enormous, cosmic power in an itty bitty space. Be prepared
+                    to pay for smol tax.
+                </div>
             </div>
-            <div class="info-content">
-                This is random info
-            </div>
-        </div>
-        <div class="card">
-            <div class="image-content">
-
-            </div>
-            <div class="info-content">
-                This is random info
-            </div>
-        </div>
-        <div class="card">
-            <div class="image-content">
-
-            </div>
-            <div class="info-content">
-                This is random info
+            <div class="card">
+                <div class="image-content">
+                    <img src="./images/DIY.jpg" alt="DIY">
+                </div>
+                <div class="info-content">
+                    DIY. When you know exactly what you want and you've got a
+                    knack for putting things together on your own. No
+                    handholding (other than us helping you source the parts).
+                </div>
             </div>
         </div>
     </div>
     <div class="section-three">
-        <div class="quote">
-            This is an inspiring quote
-        </div>
-        <div class="quote-author">
-            -Thor, God of Thunder
+        <div class="content">
+            <div class="quote">
+                I'm ready. I'm ready. I'm ready. I'm ready. I'm ready. I'm
+                ready.
+                I'm ready. I'm ready. I'm ready. I'm ready. I'm ready. I'm
+                ready.
+                I'm ready. I'm ready. I'm ready. I'm ready. I'm ready. I'm
+                ready.
+                I'm ready. I'm ready. I'm ready. I'm ready. I'm ready. I'm
+                ready.
+            </div>
+            <div class="quote-author">
+                -Squarepants, Spongebob
+            </div>
         </div>
     </div>
     <div class="section-four">
         <div class="cta-box">
-            <div class="cta-header">
-                Call to action! It's time!
-            </div>
-            <div class="cta-body">
-                Sign up for product by clicking on sign up button
+            <div class="content">
+                <div class="cta-header">
+                    Subscribe to our newsletter!
+                </div>
+                <div class="cta-body">
+                    Subscribe and get the best deals when it hits our shores.
+                </div>
             </div>
             <button class="sign-up secondary">
                 Sign up
