--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="info-content">
                     Medium (m-ATX/Mid-tower). The middle ground. Good for those
-                    who does not want any compromises but still want to place it
+                    who do not want any compromises but still want to place it
                     somewhere.
                 </div>
             </div>
